better spacing and fixed overflowing

--- a/src/components/Number/number.css
+++ b/src/components/Number/number.css
@@ -4,8 +4,8 @@
   max-width: 50vw;
 
   display: grid;
-  grid-template: 1fr / 1fr 1fr 6fr 1fr 1fr;
-  place-items: stretch;
+  grid-template: 1fr / 1fr 1fr 8fr 1fr 1fr;
+  place-items: center;
 
   font-family: var(--font-digits);
 
@@ -18,7 +18,9 @@
 .number > div {
   grid-row: 1;
   grid-column: 2 / span 3;
-
+  
+  width: 100%;
+  height: 100%;
   background: var(--color-2);
   box-shadow: var(--shadow-2);
 }
@@ -35,12 +37,12 @@
   cursor: pointer;
 }
 
-.number button:nth-child(1) {
+.number button:nth-of-type(1) {
   grid-row: 1;
   grid-column: 2;
 }
 
-.number button:nth-child(2) {
+.number button:nth-of-type(2) {
   grid-row: 1;
   grid-column: 4;
 }
@@ -60,6 +62,9 @@
 
   font-size: 2rem;
   font-family: inherit;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   background: var(--color-3);
   box-shadow: var(--shadow-3);
